# airflow-kubernetes

./: README.md
infra/: .gitignore  gke.tf  values.yaml
infra/kube/: service_account.yaml  values.yaml
infra/tf/: gcr.tf  gke.tf  terraform.tfvars
source/: .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
source/dags/: test.py
source/src/: test.py
