[tool.poetry]
name = "airflow-kubernetes"
version = "0.1.0"
description = ""
authors = ["Noel Wilson <noel.wilson@britinsurance.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.1.0"
apache-airflow = "^2.7.1"
statsd = "^4.0.1"
psycopg2-binary = "^2.9.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
